syntax = "proto3";

package rpc_int;

service Incrementer {
  // increments an int  
  rpc Increment(ValueRequest) returns (ValueReply) {}
}

message ValueRequest {
  uint64 val = 1;
}

message ValueReply {
  uint64 val = 1;
}
